[gd_scene load_steps=8 format=3 uid="uid://b0cvr2ai2hwas"]

[ext_resource type="Script" path="res://choice.gd" id="1_4mtgs"]
[ext_resource type="Shader" path="res://outline.gdshader" id="2_qqtu0"]
[ext_resource type="Texture2D" uid="uid://vnv4xusaeqnn" path="res://assets/Tiles/Terrain/Grass/grass_05.png" id="3_i0gei"]
[ext_resource type="Shader" path="res://shine.gdshader" id="4_7t3o4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85mtp"]
size = Vector2(116, 66.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bmec4"]
shader = ExtResource("4_7t3o4")
shader_parameter/onoff = null
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 0.0
shader_parameter/shine_size = 0.01

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2xew1"]
shader = ExtResource("2_qqtu0")
shader_parameter/glow_amount = 0.25
shader_parameter/glow_color = Color(1, 1, 1, 1)

[node name="choice" type="Sprite2D"]
position = Vector2(586, 283)
script = ExtResource("1_4mtgs")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_85mtp")

[node name="shine" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_bmec4")

[node name="glow" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_2xew1")
texture = ExtResource("3_i0gei")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
